--- a/par_slider.info.yml
+++ b/par_slider.info.yml
@@ -18,3 +18,11 @@ dependencies:
   - entity_reference_revisions:entity_reference_revisions
   - paragraphs:paragraphs
   - imce:imce
+  - fontawesome:fontawesome
+  - fontawesome_iconpicker_widget:fontawesome_iconpicker_widget
+  - layout_paragraphs:layout_paragraphs
+  - drupal:media
+  - drupal:media_library
+  - field_group:field_group
+  - ui_styles:ui_styles
+  - ui_styles_paragraphs:ui_styles_paragraphs
